--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@ title: 丹丹的博客
 
 <ul>
 	{% for post in site.posts %}
-	<li>{{ post.date|date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}"><h2>{ post.title }}</h2></a>
+	<li>{{ post.date|date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}"><h2>{{ post.title }}</h2></a>
 	<article>
 		{{ page.content }}
 	</article>
