--- a/_posts/2014-1-23-test.html
+++ b/_posts/2014-1-23-test.html
@@ -3,5 +3,5 @@ layout: default
 title: 测试
 ---
 <h2>{{ page.title }}</h2>
-<p>hello,world!</p>
-<p>{{ page.date|date_to_string }}</p>
+<p>hello,world</p>
+<p>住进博客第一天</p>
